# observing_door

./: .env  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  logger.py  main.py  models.py  schemas.py
app/services/: capture.py  detector.py  event_builder.py  event_service.py  image_service.py  privacy.py
data/: app.db
scripts/: create_event.py  delete_all_events.py  delete_event.py  init_db.py  list_events.py  process_image_once.py  sample_once.py
